[package]
name = "bme280"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
description = "platform-agnostic embedded-hal-async I²C driver for the Bosch BME280 humidity sensor"
repository = "https://github.com/robo9k/bme280-driver"
license = "MIT OR Apache-2.0"
keywords = [
    "embedded-hal-driver",
]
categories = [
	"embedded",
	"hardware-support",
	"no-std::no-alloc",
]
include = [
	"/src/",
]
publish = false

[package.metadata]
msrv = "1.86.0"

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "experimental" }

[features]
default = []
std = []
defmt-03 = ["dep:defmt", "embedded-hal-async/defmt-03", "arbitrary-int/defmt"]

[dependencies]
embedded-hal-async = "1"
defmt = { version = "0.3", default-features = false, optional = true }
thiserror = { version = "2.0.12", default-features = false }
bitbybit = "1.3.3"
arbitrary-int = { version = "1.3.0", default-features = false }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = ["eh1", "embedded-hal-async",] }
futures-test = "0.3.31"
